fixed contrast issues

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -84,7 +84,7 @@ img {
 
 	.swoosh {
 		height: 3000px;
-		width: 1500px;
+		width: 1000px;
 	}
 
 	.title2 {
