--- a/src/styling/Project.css
+++ b/src/styling/Project.css
@@ -46,7 +46,7 @@
 	.element {
 		width: 75vw;
 		margin-right: 5vw;
-		margin-left: 5vw;
+		margin-left: 3vw;
 		margin-top: 20px;
 	}
 }
